--- a/index.html
+++ b/index.html
@@ -24,11 +24,15 @@
     </div>
     <i class="fa fa-bars  icon" style="font-size:36px" onclick="showMenu()"></i>
     </nav><!--Nav bar-->
-     <div class="text-box header-reveal">
+     <!--<div class="text-box header-reveal">
+       <h2>Welcome</h2>
+       <p>ART AND HISTORY</p>
+     </div>-->
+    </header><!--Header-->
+    <div class="text-box header-reveal">
        <h2>Welcome</h2>
        <p>ART AND HISTORY</p>
      </div>
-    </header><!--Header-->
     <!--Galleries-->
       <h1 class="artGallery">medieval  Art</h1>
     <section class="row">
@@ -80,7 +84,7 @@
      <div class="column animate-top1">
      <img src="https://images.unsplash.com/photo-1562754193-ba39a22c110b?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=724&q=80">
      </div>
-     </section><!--section1-->
+     </section><!--section4-->
      <section>
      <div class="row">
      <div class="column animate-top1">
@@ -94,7 +98,7 @@
      like Aldus PageMaker including versions of Lorem Ipsum.</p>
      </div>
      </div>
-     </section><!--section2-->
+     </section><!--section5-->
      <section>
       <div class="row">
       <div class="column animate-top1">
@@ -107,7 +111,7 @@
       <img src="https://images.unsplash.com/photo-1575223970966-76ae61ee7838?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=750&q=80">
       </div>
       </div>
-     </section><!--section3-->
+     </section><!--section6-->
      
     <!--Footer-->
     <footer>
